# hatebu2mastodon

./: .gitignore  Cargo.toml  README.md  config.toml.sample
src/: main.rs  model.rs  send_mstdn.rs
